# python-django-sample-app

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
app/: Dockerfile  gunicorn.conf  manage.py  pyproject.toml
app/account/: admin.py  managers.py  models.py  urls.py
app/account/api/: auth.py
app/account/api/account/: api.py  serializers.py
app/account/api/profile/: api.py  serializers.py  validators.py
app/account/migrations/: 0001_initial.py
app/account/services/: account.py  auth.py  image_upload.py  profile.py
app/backup/: apps.py
app/sample/: celery_app.py  pagination.py  settings.py  urls.py
development/db/: .env.example  Dockerfile  postgresql.conf
